# IDBI-HACKTHON

./: .gitignore  DEMO.md  DEPLOY.md  README.md  RUN.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/compliance-service/: package-lock.json  package.json
apps/computation-engine/: .dockerignore  Dockerfile  Makefile  package.json  pyproject.toml
apps/computation-engine/engine/: __init__.py  app.py  math_core.py  models.py
apps/computation-engine/tests/: test_api.py  test_load.py  test_math_core.py
apps/gateway/: package.json
apps/mobile-module/: package.json
apps/orchestrator/: .dockerignore  .env.example  (+3 more)
files/: 01-product-vision.md  02-requirements.md  03-information-architecture.md  04-system-architecture.md  05-database-schema.md  06-api-contracts.md  07-monorepo-structure.md  08-computation-engine-spec.md  09-engineering-scope-definition.md  10-development-phases.md  11-environment-and-devops.md  12-testing-strategy.md  TODO.md  architecture_diagram.md  project_design.md  rules.md
information/: 01-product-vision.md  02-requirements.md  03-information-architecture.md  04-system-architecture.md  05-database-schema.md  06-api-contracts.md  07-monorepo-structure.md  08-computation-engine-spec.md  09-engineering-scope-definition.md  10-development-phases.md  11-environment-and-devops.md  12-testing-strategy.md  13-compliance-signoff.md  14-pilot-rollout.md  TODO.md  architecture_diagram.md  project_design.md  rules.md
memory/: 00-bootstrap.md  decisions.md  session_log.md
scripts/: dev.ps1
(+87 files in other folders)
