[project]
name = "computation-engine"
version = "0.1.0"
description = "Deterministic financial math engine"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
